<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.vectron.barcodescanner.ui.ProductDetailsActivity">
    <android.support.v7.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="?actionBarSize"
        android:id="@+id/action_menu_bar"
        android:background="@color/colorPrimaryDark">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/product_details_screen_title"
            android:textSize="24sp"
            android:textColor="#ffffff"
            android:layout_gravity="center"
            android:id="@+id/tv_title_settings" />
    </android.support.v7.widget.Toolbar>

    <LinearLayout
        android:orientation="vertical"
        android:layout_marginTop="20sp"
        android:paddingLeft="16sp"
        android:paddingRight="16sp"
        android:layout_below="@id/action_menu_bar"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/product_id"
            android:textSize="15sp"
            android:id="@+id/tv_product_id_label" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="40sp"
            android:hint="@string/product_id"
            android:textSize="20sp"
            android:id="@+id/tv_product_id" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/product_name"
            android:textSize="15sp"
            android:id="@+id/tv_product_name_label" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="40sp"
            android:textSize="20sp"
            android:hint="@string/product_name"
            android:id="@+id/tv_product_name" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/long_name"
            android:textSize="15sp"
            android:id="@+id/tv_product_long_name_label" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="40sp"
            android:hint="@string/long_name"
            android:textSize="20sp"
            android:id="@+id/tv_long_name" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/product_comment"
            android:textSize="15sp"
            android:id="@+id/tv_product_comment_label" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="40sp"
            android:hint="@string/comment_status"
            android:textSize="20sp"
            android:id="@+id/tv_comment" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/price_value"
            android:textSize="15sp"
            android:id="@+id/tv_product_price_label" />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/price_value"
            android:inputType="number"
            android:textSize="20sp"
            android:layout_marginTop="4sp"
            android:ems="10"
            android:id="@+id/et_price_value" />

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="15sp">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/save_config"
                android:layout_weight="1"
                android:textSize="20sp"
                android:textColor="#ffffff"
                android:background="@color/colorPrimaryDark"
                android:id="@+id/btn_save_product" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/print"
                android:textSize="20sp"
                android:layout_marginLeft="5sp"
                android:textColor="#ffffff"
                android:background="@color/colorPrimaryDark"
                android:layout_weight="1"
                android:id="@+id/btn_print" />
        </LinearLayout>
    </LinearLayout>

</RelativeLayout>
