<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.ConfigurationActivity">
    <android.support.v7.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="?actionBarSize"
        android:id="@+id/action_menu_bar"
        android:background="@color/colorPrimaryDark">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/title_configure_screen"
            android:textSize="24sp"
            android:textColor="#ffffff"
            android:layout_gravity="center"
            android:id="@+id/tv_title_settings" />
    </android.support.v7.widget.Toolbar>
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/action_menu_bar"
        android:paddingRight="20sp"
        android:paddingLeft="20sp">

        <ImageView
            android:layout_width="150sp"
            android:layout_height="100sp"
            android:layout_marginTop="10sp"
            android:layout_gravity="center_horizontal"
            android:src="@drawable/vectron_logo"
            android:id="@+id/client_logo" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="60sp"
            android:hint="@string/api_hint"
            android:textSize="20sp"
            android:id="@+id/et_api_ip" />

        <Spinner
            android:layout_width="match_parent"
            android:layout_height="40sp"
            android:layout_marginTop="5sp"
            android:spinnerMode="dropdown"
            android:id="@+id/sp_venue" />

        <Spinner
            android:layout_width="match_parent"
            android:layout_height="40sp"
            android:spinnerMode="dropdown"
            android:layout_marginTop="10sp"
            android:id="@+id/sp_store" />

        <Spinner
            android:layout_width="match_parent"
            android:layout_height="40sp"
            android:layout_marginTop="10sp"
            android:spinnerMode="dropdown"
            android:id="@+id/sp_price_name" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="60sp"
            android:layout_marginTop="5sp"
            android:hint="@string/printer_hint"
            android:textSize="20sp"
            android:id="@+id/et_printer_name" />

        <Button
            android:layout_width="100sp"
            android:layout_height="wrap_content"
            android:text="@string/save_config"
            android:textColor="#FFFFFF"
            android:background="@color/colorPrimaryDark"
            android:layout_marginTop="15sp"
            android:layout_gravity="center_horizontal"
            android:textSize="18sp"
            android:id="@+id/btn_save" />

    </LinearLayout>
</RelativeLayout>
